clusters/seaweedfs-cluster/seaweedfs-operator/seaweedfs-operator-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kube-apiserver-access
  namespace: seaweedfs-operator
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: seaweedfs-operator
      app.kubernetes.io/name: seaweedfs-operator
  egress:
  - toEntities:
    - kube-apiserver
    toPorts:
    - ports:
      - port: "6443"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        app.kubernetes.io/component: filer
        app.kubernetes.io/managed-by: seaweedfs-operator
      matchExpressions:
      - key: io.kubernetes.pod.namespace
        operator: Exists
    toPorts:
    - ports:
      - port: "8888"
        protocol: TCP
      - port: "18888"
        protocol: TCP
