clusters/seaweedfs-cluster/seaweedfs-operator/seaweedfs-operator-patch-mutating-webhook-job-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: patch--mutating-webhook-job-access
  namespace: seaweedfs-operator
spec:
  endpointSelector:
    matchLabels:
      batch.kubernetes.io/job-name: seaweedfs-operator-patch-mutating-webhook
      job-name: seaweedfs-operator-patch-mutating-webhook
  egress:
  - toEntities:
    - kube-apiserver
    toPorts:
    - ports:
      - port: "6443"
        protocol: TCP
  - toEndpoints:
      - matchLabels:
          app.kubernetes.io/instance: seaweedfs-operator
          app.kubernetes.io/name: seaweedfs-operator
          io.kubernetes.pod.namespace: seaweedfs-operator
    toPorts:
    - ports:
      - port: "9443"
        protocol: TCP
